tests: Use ansible
1. Migrate the tests to ansible.
   Each test suite is contained inside an ansible role.

2. There is no change in the functionality of the tests, except for
   the upgrade test.

3. The upgrade test creates an env with a stable version of lago, update
   lago to unstable, and then tries work with that env.

4. Dropped fc24 image from the tests.

5. Added fc25 and fc26 to the tests.

Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/roles/run_lago_env/templates/init-nested.j2
+++ b/roles/run_lago_env/templates/init-nested.j2
@@ -5,7 +5,7 @@ domains:
     nics:
       - net: lago-nested
     disks:
-      - template_name: el7.3-base
+      - template_name: {{ nested_vm_template }}
         type: template
         name: root
         dev: vda
